--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,9 @@
-FROM postgres:15
 
-ENV POSTGRES_USER=postgres
-ENV POSTGRES_DB=detector_placas_db
-
-COPY detector_placas.sql /docker-entrypoint-initdb.d/
-
-EXPOSE 5432
+FROM python:3.10-slim
+RUN apt-get update && apt-get install -y libgl1 libgtk2.0-dev && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY . .
+EXPOSE 5000
+CMD ["python", "servidor.py"]
