--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,18 @@
 services:
+  app:
+    build: . 
+    container_name: placas_python_app
+    ports:
+      - "${FLASK_APP_PORT}:${FLASK_APP_PORT}" 
+    depends_on:
+      - db
+    
+    env_file: .env 
+
+    environment:
+      DB_HOST: db               
+      PYTHONUNBUFFERED: 1
+      
   db:
     image: postgres:15
     container_name: postgres-detector-placas
