--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=detector_placas_db
-DB_HOST=db
-FLASK_APP_PORT=5001
-EOF 
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_DB="detector_placas"
+DB_HOST="localhost"
+FLASK_APP_PORT=5000
